--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,8 @@
 PORT=4000
 MONGODB_URI=mongodb://localhost:27017/shopee_affiliate
 
-# Frontend origin for CORS
-CLIENT_ORIGIN=http://localhost:5173
+# Frontend origin(s) for CORS - nhiều origin phân cách bằng dấu phẩy
+CLIENT_ORIGIN=http://localhost:5173,https://convert-link-affiliate.vercel.app
 
 # ACCESSTRADE config
 ACCESSTRADE_BASE_URL=https://api.accesstrade.vn
