--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,6 @@ CLIENT_ORIGIN_PROD=https://convert-link-affiliate.vercel.app
 
 # ACCESSTRADE config
 ACCESSTRADE_BASE_URL=https://api.accesstrade.vn
-ACCESSTRADE_API_TOKEN='Token VJ_YwgKXmoGtFtIQyzzWI8JbsCg2tmmx'
-ACCESSTRADE_SHOPEE_CAMPAIGN_ID=4751584435713464237
+ACCESSTRADE_API_TOKEN=...
+ACCESSTRADE_SHOPEE_CAMPAIGN_ID=...
 
