--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "firebase": "^12.8.0",
     "framer-motion": "^12.30.0",
     "lucide-react": "^0.563.0",
+    "motion": "^12.31.0",
+    "radix-ui": "^1.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -29,6 +31,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.7.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^6.0.5"
   }
