--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,6 +10,9 @@ CLIENT_ORIGIN_PROD=https://convert-link-affiliate.vercel.app
 # URL gốc của API (để tạo link redirect đếm click)
 API_BASE_URL=http://localhost:4000
 
+# Domain cho short link (mặc định: hoantien.shopbnh.vn)
+SHORT_LINK_DOMAIN=hoantien.shopbnh.vn
+
 # Secret để truy cập trang Admin (header: x-admin-secret)
 ADMIN_SECRET=
 
@@ -17,6 +20,7 @@ ADMIN_SECRET=
 ACCESSTRADE_BASE_URL=https://api.accesstrade.vn
 ACCESSTRADE_API_TOKEN=...
 ACCESSTRADE_SHOPEE_CAMPAIGN_ID=...
+ACCESSTRADE_LAZADA_CAMPAIGN_ID=...
 
 
 
