--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,6 +17,7 @@ ADMIN_SECRET=
 ACCESSTRADE_BASE_URL=https://api.accesstrade.vn
 ACCESSTRADE_API_TOKEN=...
 ACCESSTRADE_SHOPEE_CAMPAIGN_ID=...
+ACCESSTRADE_LAZADA_CAMPAIGN_ID=...
 
 
 
