--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,5 +19,8 @@ ACCESSTRADE_API_TOKEN=...
 ACCESSTRADE_SHOPEE_CAMPAIGN_ID=...
 ACCESSTRADE_LAZADA_CAMPAIGN_ID=...
 
+# Meilisearch (tìm kiếm coupon)
+MEILISEARCH_HOST=http://127.0.0.1:7700
+MEILISEARCH_API_KEY=
 
 
